@@ -70,4 +70,6 @@ Initial release
 * Fixed the locale characters stripping issue by making the regex only strip mIRC control codes [pyborg.py]
 * Added a check for empty nicknames with the new 'smart' replacement trick [pyborg-irc.py]
 * Made the timers stop when pyborg closes [pyborg-irc.py & pyborg.py]
-* Compartmentlized responses to ONLY taught responses when bot is in silent mode. [pyborg-irc.py & pyborg.py]
+* Compartmentlized responses to ONLY taught responses when bot is in silent mode [pyborg-irc.py & pyborg.py]
+* Fixed the teach system by making it only match words with up to 4 extra letter variations [pyborg.py]
+* Changed the !find command to return the triggers that match the phrase search [pyborg.py]
